fix: post list counter alignment

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -67,7 +67,8 @@ code {
 			content: "" counter(start-from, decimal-leading-zero) ". ";
 			line-height: 100%;
 			text-align: right;
-			margin-left: -1.5rem;
+			margin-left: calc((var(--base-size-16) * -1) - var(--base-size-4));
+			margin-right: var(--base-size-4);
 		}
 	}
 
@@ -99,6 +100,10 @@ code {
 	text-underline-position: from-font;
 	text-underline-offset: 0;
 	text-decoration-thickness: 1px;
+
+	&:focus-visible {
+		@include mixins.focus();
+	}
 }
 
 /* Tags */
