--- a/scss/partials/_mixins.scss
+++ b/scss/partials/_mixins.scss
@@ -128,9 +128,6 @@
 //--------------------
 
 @mixin focus() {
-	box-shadow:
-		rgba(50, 50, 93, 0.1) 0 0 0 1px inset,
-		rgba(50, 50, 93, 0.2) 0 6px 15px 0,
-		var(--cds-border-subtle-selected-01) 0 2px 2px 0,
-		rgba(50, 151, 211, 0.3) 0 0 0 4px;
+	outline-offset: 1px;
+	outline: var(--color-checks-input-focus-text) auto 1px;
 }
